--- a/frontend/src/app/components/pages/pupil-reflexes-test/pupil-reflexes-test.component.html
+++ b/frontend/src/app/components/pages/pupil-reflexes-test/pupil-reflexes-test.component.html
@@ -11,7 +11,7 @@
       <div class="card-container case-study-instructions">
         <h2>Instructions:</h2>
         <p>
-          Move the mouse over the eyes to observe the pupil reflexes.
+          Move the light (i.e. mouse) over the eyes to observe the pupil reflexes.
         </p>
       </div>
       <!--Canvas container-->
