--- a/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.css
+++ b/frontend/src/app/components/pages/direct-ophthalmoscopy-test/direct-ophthalmoscopy-test.component.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
 }
 
 /* Navbar Styles */
@@ -15,6 +16,8 @@
   display: flex;
   flex-direction: column;
   width: 75%; /* Adjust width according to your needs */
+  background-color: rgb(238, 234, 234);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
 }
 
 /* Title Container */
