--- a/frontend/src/app/components/pages/pupil-reflexes-test/pupil-reflexes-test.component.css
+++ b/frontend/src/app/components/pages/pupil-reflexes-test/pupil-reflexes-test.component.css
@@ -1,39 +1,59 @@
-.full-container {
+ /* Parent Container allows for a row layout */
+ .parent-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  
 }
 
-.parent-container {
+/* Navbar Styles */
+.app-navbar {
+  width: 25%; /* Adjust width according to your needs */
+}
+
+/* Eye Movements Container Styles */
+.eye-movements-container {
   display: flex;
-  flex-direction: row;
-  height: 100vh;
+  flex-direction: column;
+  width: 75%; /* Adjust width according to your needs */
 }
 
-.d-flex {
+/* Title Container Styles */
+.title-container {
+  text-align: center; /* Center the title */
+  padding: 20px 0; /* Add some vertical padding */
+}
+
+/* Title Styles */
+.title {
+  margin: 0; /* Reset the margin */
+}
+
+/* Case Study Instructions Styles */
+.case-study-instructions {
+  text-align: center;
+  padding: 10px;
+}
+
+/* Canvas Container Styles */
+#canvasContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.card-container {
+  background-color: rgb(238, 234, 234);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  color: #9c88ff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 
-.text-center {
-  text-align: center;
-}
-
-#canvasContainer {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media (max-width: 600px) {
-  .card-container {
-    width: 90%;
-  }
-  .parent-container {
-    flex-direction: column;
-  }
-}
