--- a/frontend/src/app/components/pages/user-profile-page/user-profile-page.component.css
+++ b/frontend/src/app/components/pages/user-profile-page/user-profile-page.component.css
@@ -1,68 +1,12 @@
-/* Parent Container */
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Center vertically */
-  align-items: center; /* Center horizontally */
-  padding: 2em;
-  background-color: white;
+.custom-card-height {
+  height: 100%;
 }
 
-/* Card Styles */
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Center vertically */
-  align-items: center; /* Center horizontally */
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: rgb(238, 234, 234);
+h3{
+  font-weight: bolder;
+}
+
+
+.card-body{
   color: #9c88ff;
-  margin-right: 50px;
-  padding: 40px;
-  width: 100%;
-}
-
-.card-title {
-  font-size: 2em; /* Increased the font size */
-  font-weight: bold; /* Made the font weight bold */
-  letter-spacing: 1px; /* Added letter spacing */
-  color: #9c88ff;
-}
-
-.card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Center vertically */
-  align-items: center; /* Center horizontally */
-}
-
-.btn-primary {
-  background-color: #9c88ff;
-  border-color: #9c88ff;
-}
-
-/* Font Awesome Icons */
-.fa-check {
-  color: green;
-}
-
-.fa-times {
-  color: red;
-}
-
-/* User's Activities */
-.card-outline-secondary {
-  border-color: #9c88ff;
-}
-
-.card-header {
-  background-color: #9c88ff;
-  color: white;
-}
-
-@media screen and (min-width: 800px) {
-  .card {
-    max-width: 800px;
-  }
 }
