made changes to the application structure

--- a/frontend/src/app/components/partials/navbar-case-study/navbar.component.html
+++ b/frontend/src/app/components/partials/navbar-case-study/navbar.component.html
@@ -18,7 +18,7 @@
           <li><a [routerLink]="'/welcome/' + caseStudy._id">Test Yourself</a></li>
         </ul>
       </li>
-      <li class="dropdown" *ngIf="isPatientConvoFinished && isEyeExaminationTestFinished && isInvestigationTestFinished">
+      <li class="dropdown" *ngIf="isPatientConvoFinished && isEyeExaminationTestFinished">
         <a class="dropdown-toggle">Investigations</a>
         <ul class="dropdown-menu">
           <li><a>Investigations Selection</a></li>
