--- a/frontend/src/app/components/pages/QA/abstract-test/investigations-questions/investigations-questions.component.html
+++ b/frontend/src/app/components/pages/QA/abstract-test/investigations-questions/investigations-questions.component.html
@@ -53,7 +53,7 @@
             </div>
             <div class="question">
               <div class="card">
-                <h3>{{ questionList[currentQuestion].questionText }}</h3>
+                <h3>{{ questionList[currentQuestion]?.questionText }}</h3>
               </div>
             </div>
             <div class="options">
