--- a/frontend/src/app/components/pages/QA/abstract-test/diagnosis-questions/diagnosis-questions.component.html
+++ b/frontend/src/app/components/pages/QA/abstract-test/diagnosis-questions/diagnosis-questions.component.html
@@ -1,4 +1,4 @@
-<!--frontend/src/app/components/pages/question/question.component.html-->
+<!-- frontend/src/app/components/pages/QA/abstract-test/diagnosis-questions/diagnosis-questions.component.html -->
 <div class="full-container">
   <div class="parent-container">
     <!--navbar partial-->
@@ -22,14 +22,15 @@
                 />
               </div>
               <div class="quiz-header">
-                <h4>Eye Tests Quiz</h4>
+                <h4>{{typeOfTest}} Quiz</h4>
                 <span>Welcome {{ name }}</span>
               </div>
             </div>
             <div class="d-flex justify-content-around py-3">
-              <div class="score">
+              <!--CAN ADD IN IF HAVE TIME-->
+              <!-- <div class="score">
                 <h5>{{ points }} Points</h5>
-              </div>
+              </div> -->
               <div class="question-remain">
                 <!--dynamically change question number-->
                 <span style="font-style: italic"
@@ -81,7 +82,7 @@
               <button class="btn" (click)="resetQuiz()">
                 <i
                   class="text-primary fa-solid fa-arrows-rotate fa-3x"
-
+   
                 ></i>
               </button>
               <button class="btn" (click)="nextQuestion()">
@@ -107,10 +108,14 @@
                   Below is your results:
                 </h3>
                 <p>You have compelted the quiz. See your results below:</p>
-                <p>Total Questions Attempted : {{ questionList.length }}</p>
-                <p>Total Correct Answers : {{ correctAnswer }}</p>
-                <p>Total Incorrect Answers : {{ incorrectAnswer }}</p>
-                <p>Your Score : {{ points }}</p>
+              
+                <div *ngIf="userScore ||correctAnswer || incorrectAnswer || totalQuestions!== undefined">
+                  <h3>Your Score:</h3>
+                  <p>{{ userScore }} / {{getTotalScore()}}</p>
+                  <p>Total Questions Attempted : {{ totalQuestions }}</p>
+                  <p>Total Correct Answers : {{ correctAnswer }}</p>
+                  <p>Total Incorrect Answers : {{ incorrectAnswer }}</p>
+                </div>
               </div>
             </div>
           </ng-container>
