--- a/frontend/src/app/components/pages/QA/abstract-test/investigations-questions/investigations-questions.component.html
+++ b/frontend/src/app/components/pages/QA/abstract-test/investigations-questions/investigations-questions.component.html
@@ -22,14 +22,14 @@
                 />
               </div>
               <div class="quiz-header">
-                <h4>Eye Tests Quiz</h4>
+                <h4>{{typeOfTest}} Quiz</h4>
                 <span>Welcome {{ name }}</span>
               </div>
             </div>
             <div class="d-flex justify-content-around py-3">
-              <div class="score">
+              <!-- <div class="score">
                 <h5>{{ points }} Points</h5>
-              </div>
+              </div> -->
               <div class="question-remain">
                 <!--dynamically change question number-->
                 <span style="font-style: italic"
@@ -62,19 +62,22 @@
                 <!--Change to not submit answer until user has selected all the options they want-->
                 <li (click)="toggleAnswer(currentQuestion, option)">
                   <!--call the appChangeBg directive depending on if the answer selected is correct or not-->
-                      <div appChangeBg [isCorrect]="isSelected(option)" class="card">
-                          {{ option.text }}
-                      </div>
-                  </li>
+                  <div
+                    appChangeBg
+                    [isCorrect]="isSelected(option)"
+                    class="card"
+                  >
+                    {{ option.text }}
+                  </div>
+                </li>
               </ol>
-          </div>
+            </div>
 
-          <div class="button submit">
-            <button class="btn" (click)="answer(currentQuestion)">
-              Submit Answer
-          </button>
-          
-          </div>
+            <div class="button submit">
+              <button class="btn" (click)="answer(currentQuestion)">
+                Submit Answer
+              </button>
+            </div>
 
             <div class="d-flex justify-content-between">
               <!--disable moving back and forward if below question 1 and over last question-->
@@ -86,10 +89,7 @@
                 <i class="text-primary fa-solid fa-chevron-left fa-3x"></i>
               </button>
               <button class="btn" (click)="resetQuiz()">
-                <i
-                  class="text-primary fa-solid fa-arrows-rotate fa-3x"
-    
-                ></i>
+                <i class="text-primary fa-solid fa-arrows-rotate fa-3x"></i>
               </button>
               <button class="btn" (click)="nextQuestion()">
                 <i class="text-primary fa-solid fa-chevron-right fa-3x"></i>
@@ -114,10 +114,14 @@
                   Below is your results:
                 </h3>
                 <p>You have compelted the quiz. See your results below:</p>
-                <p>Total Questions Attempted : {{ questionList.length }}</p>
-                <p>Total Correct Answers : {{ correctAnswer }}</p>
-                <p>Total Incorrect Answers : {{ incorrectAnswer }}</p>
-                <p>Your Score : {{ userScore$ | async }}</p>
+              
+                <div *ngIf="userScore ||correctAnswer || incorrectAnswer || totalQuestions!== undefined">
+                  <h3>Your Score:</h3>
+                  <p>{{ userScore }} / {{totalScore}}</p>
+                  <p>Total Questions Attempted : {{ totalQuestions }}</p>
+                  <p>Total Correct Answers : {{ correctAnswer }}</p>
+                  <p>Total Incorrect Answers : {{ incorrectAnswer }}</p>
+                </div>
               </div>
             </div>
           </ng-container>
