--- a/frontend/src/app/components/partials/navbars/navbar-case-study/navbar.component.html
+++ b/frontend/src/app/components/partials/navbars/navbar-case-study/navbar.component.html
@@ -25,7 +25,7 @@
           <li *ngIf="isInvestigationsTestFinished"><a>Investigations Images</a></li>
         </ul>
       </li>
-      <li *ngIf="isPatientConvoFinished && isEyeTestFinished && isInvestigationsTestFinished">
+      <li *ngIf="isPatientConvoFinished && isEyeTestFinished">
         <a [routerLink]="'/diagnosis-questions/' + caseStudy._id">Diagnosis</a>
       </li>
     </ul>
