--- a/frontend/src/app/components/pages/graphs/user-scores/user-scores.component.css
+++ b/frontend/src/app/components/pages/graphs/user-scores/user-scores.component.css
@@ -25,3 +25,100 @@
   border-radius: 5px;
 }
 /* END -- CSS in order to create a modal structure to show more details*/
+
+
+
+/**/
+
+.sortable:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.details-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.details-content {
+  width: 80%;
+  max-width: 600px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.parent-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.app-navbar {
+  width: 25%;
+}
+
+.right-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  /* Centralize horizontally */
+  width: 75%; 
+  padding: 20px;
+  background-color: rgb(238, 234, 234);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+}
+
+.title {
+  margin: 0; /* Reset the margin */
+}
+
+.text-center {
+  text-align: center;
+}
+
+.card-container {
+  background-color: rgb(238, 234, 234);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  color: #9c88ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.button {
+  background-color: #4CAF50;
+  color: white;
+  text-align: center;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+.button:hover {
+  background-color: #45a049;
+}
+
+/* New or adjusted styles */
+
+.instructions {
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.navbar-style {
+  margin-bottom: 20px; /* Adjust based on your design preference */
+}
