--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -16,7 +16,7 @@
         </div>
           <div class="menu">
             <a routerLink="/user-profile-page">Profile</a>
-            <a routerLink="/scores">Scores</a>
+            <a routerLink="/user-scores">Scores</a>
             <a routerLink="/admin" *ngIf="isAdmin">Admin</a>
             <a (click)="logout()">Logout</a>
           </div>
