created user graphs

--- a/frontend/src/app/components/partials/navbars/navbar-userscore/navbar-userscore.component.html
+++ b/frontend/src/app/components/partials/navbars/navbar-userscore/navbar-userscore.component.html
@@ -5,13 +5,23 @@
   <div class="navbar-inner">
     <ul class="nav navbar-nav">
       <li class="active">
-        <a routerLink="/scores"
+        <a routerLink="/user-scores"
           >Past Tests</a
         >
       </li>
       <li class="active">
         <a routerLink="/userscore-score-over-time"
-          >Userscore Scores Over Time</a
+          >User Test Percentages Over Time</a
+        >
+      </li>
+      <li class="active">
+        <a routerLink="/user-case-study-correct-vs-oncorrect"
+          >User Test Percentages Across Case Studies</a
+        >
+      </li>
+      <li class="active">
+        <a routerLink="/user-case-study-question-type-correct-vs-incorrect"
+          >User Test Percentages Across Case Studies & Question Type</a
         >
       </li>
     </ul>
