--- a/frontend/src/app/components/partials/navbars/admin-navbar/admin-navbar.component.html
+++ b/frontend/src/app/components/partials/navbars/admin-navbar/admin-navbar.component.html
@@ -4,7 +4,7 @@
     <div class="collapse navbar-collapse">
       <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
         <li class="nav-item">
-          <a class="nav-link pl-0 text-nowrap" href="/admin">
+          <a class="nav-link pl-0 text-nowrap" href="/admin-case-study-correct-vs-incorrect">
             <i class="fa fa-bullseye fa-fw"></i> User Scores per
           </a>
         </li>
